--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -1,1 +1,1 @@
-<p app-topic-details *ngFor="let t of topics" [topic]="t"></p>
+<span app-topic-details *ngFor="let t of topics" [topic]="t"></span>
