--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,16 +40,16 @@
         <!-- Filter Panel -->
         <div class="w3-card w3-round w3-white">
           <div class="w3-padding-16">
-            <h4 class="w3-center">Filters</h4>
+            <h4 class="w3-center w3-theme-l1">Filters</h4>
             <!-- TODO <p class="w3-center"><img src="/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p> -->
-            <button onclick="showDetails('ByTopic')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>By Topic</button>
+            <button onclick="showDetails('ByTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>By Topic</button>
             <div id="ByTopic" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-book fa-fw w3-margin-right w3-text-theme"></i>Book</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-newspaper fa-fw w3-margin-right w3-text-theme"></i>Article</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-file-alt fa-fw w3-margin-right w3-text-theme"></i>Document</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-link fa-fw w3-margin-right w3-text-theme"></i>Web Document</button>
             </div>
-            <button onclick="showDetails('ByLocation')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>By Location</button>
+            <button onclick="showDetails('ByLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>By Location</button>
             <div id="ByLocation" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-layer-group fa-fw w3-margin-right w3-text-theme"></i>Shelf</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-archive fa-fw w3-margin-right w3-text-theme"></i>Box</button>
@@ -64,15 +64,15 @@
         <!-- Operations -->
         <div class="w3-card w3-round w3-white">
           <div class="w3-padding-16">
-            <h4 class="w3-center">Operations</h4>
-            <button onclick="showDetails('NewTopic')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>New Topic</button>
+            <h4 class="w3-center w3-theme-l1">Operations</h4>
+            <button onclick="showDetails('NewTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>New Topic</button>
             <div id="NewTopic" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-book fa-fw w3-margin-right w3-text-theme"></i>Book</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-newspaper fa-fw w3-margin-right w3-text-theme"></i>Article</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-file-alt fa-fw w3-margin-right w3-text-theme"></i>Document</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-link fa-fw w3-margin-right w3-text-theme"></i>Web Document</button>
             </div>
-            <button onclick="showDetails('NewLocation')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>New Location</button>
+            <button onclick="showDetails('NewLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>New Location</button>
             <div id="NewLocation" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-layer-group fa-fw w3-margin-right w3-text-theme"></i>Shelf</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-archive fa-fw w3-margin-right w3-text-theme"></i>Box</button>
@@ -87,8 +87,8 @@
         
         <!-- Frequent Tags --> 
         <div class="w3-card w3-round w3-white w3-hide-small">
-          <div class="w3-container">
-            <p>Frequent Tags</p>
+          <div class="w3-padding-16">
+            <h4 class="w3-center w3-theme-l1">Frequent Tags</h4>
             <p>
               <span class="w3-tag w3-small w3-theme-d5">News</span>
               <span class="w3-tag w3-small w3-theme-d4">W3Schools</span>
