changed list visualization

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,14 +42,14 @@
           <div class="w3-padding-16">
             <h4 class="w3-center w3-theme-l1">Filters</h4>
             <!-- TODO <p class="w3-center"><img src="/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p> -->
-            <button onclick="showDetails('ByTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>By Topic</button>
+            <button onclick="showDetails('ByTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right w3-text-theme"></i>By Topic</button>
             <div id="ByTopic" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-book fa-fw w3-margin-right w3-text-theme"></i>Book</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-newspaper fa-fw w3-margin-right w3-text-theme"></i>Article</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-file-alt fa-fw w3-margin-right w3-text-theme"></i>Document</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-link fa-fw w3-margin-right w3-text-theme"></i>Web Document</button>
             </div>
-            <button onclick="showDetails('ByLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>By Location</button>
+            <button onclick="showDetails('ByLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right w3-text-theme"></i>By Location</button>
             <div id="ByLocation" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-layer-group fa-fw w3-margin-right w3-text-theme"></i>Shelf</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-archive fa-fw w3-margin-right w3-text-theme"></i>Box</button>
@@ -65,14 +65,14 @@
         <div class="w3-card w3-round w3-white">
           <div class="w3-padding-16">
             <h4 class="w3-center w3-theme-l1">Operations</h4>
-            <button onclick="showDetails('NewTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right"></i>New Topic</button>
+            <button onclick="showDetails('NewTopic')" class="w3-button w3-block w3-left-align"><i class="fa fa-book-open fa-fw w3-margin-right w3-text-theme"></i>New Topic</button>
             <div id="NewTopic" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-book fa-fw w3-margin-right w3-text-theme"></i>Book</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-newspaper fa-fw w3-margin-right w3-text-theme"></i>Article</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-file-alt fa-fw w3-margin-right w3-text-theme"></i>Document</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-link fa-fw w3-margin-right w3-text-theme"></i>Web Document</button>
             </div>
-            <button onclick="showDetails('NewLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right"></i>New Location</button>
+            <button onclick="showDetails('NewLocation')" class="w3-button w3-block w3-left-align"><i class="fa fa-boxes fa-fw w3-margin-right w3-text-theme"></i>New Location</button>
             <div id="NewLocation" class="w3-hide w3-container">
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-layer-group fa-fw w3-margin-right w3-text-theme"></i>Shelf</button>
               <button class="w3-button w3-block w3-left-align"><i class="fa fa-archive fa-fw w3-margin-right w3-text-theme"></i>Box</button>
