--- a/src/app/magazine-details/magazine-details.component.html
+++ b/src/app/magazine-details/magazine-details.component.html
@@ -1,22 +1,5 @@
-<table class="w3-table w3-bordered">
-  <tr>
-    <th>Title</th>
-    <td>{{magazine.title}}</td>
-  </tr>
-  <tr>
-    <th>Number</th>
-    <td>{{magazine.number}}</td>
-  </tr>
-  <tr>
-    <th>Date</th>
-    <td>{{magazine.month}}/{{magazine.year}}</td>
-  </tr>
-  <tr>
-    <th>Pages</th>
-    <td>{{magazine.pages}}</td>
-  </tr>
-  <tr>
-    <th>Editor</th>
-    <td>{{magazine.editor}}</td>
-  </tr>
-</table>
+<div class="w3-border-bottom"><strong>Title: </strong>{{magazine.title}}</div>
+<div class="w3-border-bottom"><strong>Number: </strong>{{magazine.number}}</div>
+<div class="w3-border-bottom"><strong>Date: </strong>{{magazine.month}}/{{magazine.year}}</div>
+<div class="w3-border-bottom"><strong>Total Pages: </strong>{{magazine.pages}}</div>
+<div class="w3-border-bottom"><strong>Editor: </strong>{{magazine.editor}}</div>
