--- a/src/app/article-details/article-details.component.html
+++ b/src/app/article-details/article-details.component.html
@@ -1,18 +1,3 @@
-<table class="w3-table w3-bordered">
-  <tr>
-    <th>Title</th>
-    <td>{{article.title}}</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>{{article.description}}</td>
-  </tr>
-  <tr>
-    <th>Page</th>
-    <td>{{article.page}}</td>
-  </tr>
-  <tr>
-    <th>Magazine</th>
-    <td app-magazine-details [magazine]="article.magazine"></td>
-  </tr>
-</table>
+<app-topic-details [topic]="article"></app-topic-details>
+<div class="w3-border-bottom"><strong>Page: </strong>{{article.page}}</div>
+<div class="flex-container w3-border-bottom"><div class="flex-item-first"><strong>Magazine: </strong></div><div app-magazine-details [magazine]="article.magazine" class="flex-item-last"></div></div>
