--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -5,4 +5,6 @@
     </button>
     <p app-article-details [article]="topic" *ngIf="showTopicDetails[i] && topic.type == 'Article'" class="w3-card w3-round w3-white w3-padding w3-left-align"></p>
     <p app-book-details *ngIf="showTopicDetails[i] && topic.type == 'Book'" [book]="topic" class="w3-card w3-round w3-white w3-padding w3-left-align"></p>    
+    <p app-document-details *ngIf="showTopicDetails[i] && topic.type == 'Document'" [document]="topic" class="w3-card w3-round w3-white w3-padding w3-left-align"></p>    
+    <p app-web-document-details *ngIf="showTopicDetails[i] && topic.type == 'Web Document'" [webDocument]="topic" class="w3-card w3-round w3-white w3-padding w3-left-align"></p>    
 </span>
