--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@ html,body,h1,h2,h3,h4,h5,h6 {
     font-family: "Open Sans", sans-serif
 }
 
+a {
+    text-decoration: none;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
