--- a/src/app/article-details/article-details.component.html
+++ b/src/app/article-details/article-details.component.html
@@ -1,3 +1,3 @@
 <app-topic-details [topic]="article"></app-topic-details>
-<div class="w3-border-bottom"><strong>Page: </strong>{{article.page}}</div>
-<div class="flex-container w3-border-bottom"><div class="flex-item-first"><strong>Magazine: </strong></div><div app-magazine-details [magazine]="article.magazine" class="flex-item-last"></div></div>
+<div class="w3-border-bottom w3-padding"><strong>Page: </strong>{{article.page}}</div>
+<div class="flex-container w3-border-bottom w3-padding"><div class="flex-item-first"><strong>Magazine: </strong></div><div app-magazine-details [magazine]="article.magazine" class="flex-item-last"></div></div>
