--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,2 +1,2 @@
 <app-topic-details [topic]="book"></app-topic-details>
-<div class="w3-border-bottom"><strong>Total Pages: </strong>{{book.pages}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Total Pages: </strong>{{book.pages}}</div>
