--- a/src/app/magazine-details/magazine-details.component.html
+++ b/src/app/magazine-details/magazine-details.component.html
@@ -1,5 +1,5 @@
-<div class="w3-border-bottom"><strong>Title: </strong>{{magazine.title}}</div>
-<div class="w3-border-bottom"><strong>Number: </strong>{{magazine.number}}</div>
-<div class="w3-border-bottom"><strong>Date: </strong>{{magazine.month}}/{{magazine.year}}</div>
-<div class="w3-border-bottom"><strong>Total Pages: </strong>{{magazine.pages}}</div>
-<div class="w3-border-bottom"><strong>Editor: </strong>{{magazine.editor}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Title: </strong>{{magazine.title}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Number: </strong>{{magazine.number}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Date: </strong>{{magazine.month}}/{{magazine.year}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Total Pages: </strong>{{magazine.pages}}</div>
+<div class="w3-border-bottom w3-padding"><strong>Editor: </strong>{{magazine.editor}}</div>
