added new magazine form

--- a/src/app/magazine-list/magazine-list.component.html
+++ b/src/app/magazine-list/magazine-list.component.html
@@ -2,6 +2,7 @@
 <table class="w3-table w3-bordered">
   <thead>
     <tr>
+      <th><i (click)="newDataForm()" class="fa fa-plus-square fa-fw w3-margin-right w3-text-theme cursor-pointer"></i></th>
       <th>Title</th>
       <th class="w3-right-align">Number</th>
       <th class="w3-right-align">Year</th>
@@ -11,7 +12,19 @@
     </tr>
   </thead>
   <tbody>
+    <tr *ngIf="showInsertForm">
+      <form [formGroup]="magazineForm">
+        <td></td>
+        <td><input type="text" formControlName="title"></td>
+        <td><input type="text" formControlName="number"></td>
+        <td><input type="text" formControlName="year"></td>
+        <td><input type="text" formControlName="month"></td>
+        <td><input type="text" formControlName="pages"></td>
+        <td><input type="text" formControlName="editor"></td>
+      </form>
+    </tr>
     <tr *ngFor="let magazine of magazines">
+      <td></td>
       <td>{{magazine.title}}</td>
       <td class="w3-right-align">{{magazine.number}}</td>
       <td class="w3-right-align">{{magazine.year}}</td>
