changed magazine form visualization

--- a/src/app/magazine-list/magazine-list.component.html
+++ b/src/app/magazine-list/magazine-list.component.html
@@ -1,9 +1,9 @@
 <h4>Magazine Management</h4><br>
-<app-magazine-edit #insertForm></app-magazine-edit>
+<app-magazine-edit></app-magazine-edit>
 <table class="w3-table w3-bordered">
   <thead>
     <tr>
-      <th><i (click)="insertForm.show()" class="fa fa-plus-square fa-fw w3-margin-right w3-text-theme cursor-pointer"></i></th>
+      <th><i (click)="showForm()" class="fa fa-plus-square fa-fw w3-margin-right w3-text-theme cursor-pointer"></i></th>
       <th>Title</th>
       <th class="w3-right-align">Number</th>
       <th class="w3-right-align">Year</th>
