--- a/src/app/magazine-edit/magazine-edit.component.html
+++ b/src/app/magazine-edit/magazine-edit.component.html
@@ -1,10 +1,10 @@
-<form *ngIf="showForm" [formGroup]="magazineForm">
-    <span class="single"><label>Title</label><input type="text" size="50" formControlName="title"></span>
-    <span class="near"><label>Number</label><input type="text" size="5" formControlName="number"></span>
-    <span class="near"><label>Year</label><input type="text" size="4" formControlName="year"></span>
-    <span class="near"><label>Month</label><input type="text" size="2" formControlName="month"></span>
-    <span class="near"><label>Pages</label><input type="text" size="5" formControlName="pages"></span>
-    <span class="single"><label>Editor</label><input type="text" size="50" formControlName="editor"></span>
-    <button>Save</button>
-    <button class="near" (click)="cancel()">Cancel</button>
+<form class="w3-border w3-padding" *ngIf="showForm" [formGroup]="magazineForm">
+    <span class="w3-block"><label>Title</label><input type="text" size="50" formControlName="title"></span>
+    <span class="w3-show-inline-block"><label>Number</label><input type="text" size="5" formControlName="number"></span>
+    <span class="w3-show-inline-block"><label>Year</label><input type="text" size="4" formControlName="year"></span>
+    <span class="w3-show-inline-block"><label>Month</label><input type="text" size="2" formControlName="month"></span>
+    <span class="w3-show-inline-block"><label>Pages</label><input type="text" size="5" formControlName="pages"></span>
+    <span class="w3-block"><label>Editor</label><input type="text" size="50" formControlName="editor"></span>
+    <button class="w3-button w3-margin-top w3-margin-right w3-theme-l4">Save</button>
+    <button class="w3-button w3-margin-top w3-margin-right w3-theme-l4" (click)="cancel()">Cancel</button>
 </form>
