--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,8 +164,8 @@
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
               <div class="w3-container w3-padding">
-                <p contenteditable="true" class="w3-border w3-padding">title and description words</p>
-                <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>Search</button> 
+                <p contenteditable="true" class="w3-border w3-padding w3-opacity">title and description words</p>
+                <button class="w3-button w3-theme-l4">Search</button> 
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
         <!-- Data management -->
         <div *ngIf="showDetails" class="w3-container w3-card w3-white w3-round w3-margin"><br>
           <img src="assets/icons/iconfinder_25_3319619.png" alt="Latest Topic" class="w3-left w3-circle w3-margin-right" style="width:48px">
-          <span (click)="showDetails=false" class="w3-right w3-opacity cursor-pointer">Close</span>          
+          <span (click)="showDetails=false" class="w3-right w3-opacity cursor-pointer"><i class="far fa-window-close "></i></span>          
           <app-magazine-list *ngIf="this.managementType === 'magazine'"></app-magazine-list>
         </div>
 
